# farmstudy

./: .firebaserc  .gitignore  Cargo.toml  firestore.rules  index.rs  now.json  package.json
api/: Cargo.toml  index.rs  now.json  oldCargo.toml
api/src/: main.rs
public/: index.html
src/: App.js  App.tsx  Routes.js  Routes.tsx  db.rs  firebaseInit.js  firebaseInit.tsx  graph.rs  index.js  main.rs  routes.rs  see_this.txt
src/components/: Dashboard.js  Dashboard.tsx  Home.js  Home.tsx  Loading.tsx  Login.tsx  Signup.tsx  layout.js
src/components/Firebase/: firebase.js
src/components/LoginManagement/: index.js
src/components/Messages/: Messages.js
src/components/SignIn/: index.js
src/components/Users/: UserList.js
src/graphql/: models.rs  schema.rs
src/pages/: signin.js
src/routes/: genus.rs  mod.rs
src/store/: index.tsx
