[package]
name = "farmstudy"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["cypher_pool", "json", "serve"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rusted_cypher = "1.1"
juniper = "0.11"
uuid = { version = "0.7", features = ["serde", "v4"] }
